增加滑动效果和个人信息

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Wow Portfolio Multi Purpose HTML5 Template | Webthemez</title>
+<title>欢迎来到我的世界--付帅</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
@@ -37,7 +37,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           <div class="col-md-12">
 		   
             <div class="top_left_cont zoomIn wow animated"> 
-              <h2>Hello, my name is 付帅<br> <strong>I <i class="fa fa-heart"></i> Designing</strong></h2>
+              <h2>Hello, my name is 付帅<br> <strong>I <i class="fa fa-heart"></i> CODE</strong></h2>
 
                 <div class="underline"></div>             
               <a href="#aboutUs" class="read_more2">Who Am I</a> </div>
