修改认识我

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
         </div>
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
-			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
-			  <li><a href="#aboutUs" class="scroll-link">About Me</a></li>
+			  <li class="active"><a href="#hero_section" class="scroll-link">主页</a></li>
+			  <li><a href="#aboutUs" class="scroll-link">关于</a></li>
 			  <li><a href="#service" class="scroll-link">Skills</a></li>
-			  <li><a href="#Portfolio" class="scroll-link">Projects</a></li>
-			  <li><a href="#clients" class="scroll-link">Experience</a></li>
-			  <li><a href="#team" class="scroll-link">Testimonial</a></li>
-			  <li><a href="#contact" class="scroll-link">Contact</a></li>
+			  <li><a href="#Portfolio" class="scroll-link">项目</a></li>
+			  <li><a href="#clients" class="scroll-link">经验</a></li>
+			  <li><a href="#team" class="scroll-link">团队</a></li>
+			  <li><a href="#contact" class="scroll-link">联系我</a></li>
 			</ul>
       </div>
 	 </nav>
@@ -405,16 +405,16 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
         <div class="col-lg-4 wow fadeInLeft">	
 		 <div class="contact_info">
                             <div class="detail">
-                                <h4>UNIQUE Infoway</h4>
-                                <p>104, Some street, NewYork, USA</p>
+                                <h4>地址</h4>
+                                <p>411, , 信阳, 中国</p>
                             </div>
                             <div class="detail">
-                                <h4>call us</h4>
-                                <p>+1 234 567890</p>
+                                <h4>联系我</h4>
+                                <p>+86 10086</p>
                             </div>
                             <div class="detail">
                                 <h4>Email us</h4>
-                                <p>support@sitename.com</p>
+                                <p>fushuai137829@gmail.com</p>
                             </div> 
                         </div>
        		  
