--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 			<ul class="nav navbar-nav" id="mainNav">
 			  <li class="active"><a href="#hero_section" class="scroll-link">主页</a></li>
 			  <li><a href="#aboutUs" class="scroll-link">关于</a></li>
-			  <li><a href="#service" class="scroll-link">技能</a></li>
+			  <li><a href="#service" class="scroll-link">技术栈</a></li>
 			  <li><a href="#Portfolio" class="scroll-link">项目</a></li>
 			  <li><a href="#clients" class="scroll-link">经验</a></li>
 			  <li><a href="#team" class="scroll-link">团队</a></li>
@@ -115,7 +115,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <!--Service-->
 <section  id="service">
   <div class="container">
-    <h2>技能</h2>
+    <h2>技术栈</h2>
 	<h6>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum</h6>
     <div class="service_wrapper">
       <div class="row">
