技术栈介绍

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
               <h2>Hello, my name is 付帅<br> <strong>I <i class="fa fa-heart"></i> CODE</strong></h2>
 
                 <div class="underline"></div>             
-              <a href="#aboutUs" class="read_more2">Who Am I</a> </div>
+              <a href="#aboutUs" class="read_more2">个人介绍</a> </div>
           </div> 
         </div>
       </div>
@@ -79,7 +79,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <div class="inner_wrapper aboutUs-container fadeInLeft animated wow">
   <div class="container">
     <h2>Who Am I</h2>
-	<h6>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum</h6>
+	<h6>从事前端开发3年，开发网页以及小程序，大型企业后台系统</h6></h6>
     <div class="inner_section"> 
 	  <div class="row">
 						<div class="col-lg-12 about-us">
