--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <!--/Portfolio --> 
 
 <section class="page_section" id="clients"><!--page_section-->
-  <h2>Worked For</h2>
+  <h2>工作履历</h2>
 <!--page_section-->
 <div class="client_logos"><!--client_logos-->
   <div class="container">
