--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 	  <div class="row">
 						<div class="col-lg-12 about-us">
 							<div class="row">
-							<div class="col-md-6"> <img class="img-responsive" src="img/about1.png" align=""> </div><!-- /.col-md-6 -->
+                <!--  背景展示 原地址 <div class="col-md-6"> <img class="img-responsive" src="img/about1.png"   -->
+							<div class="col-md-6"> <img class="img-responsive" src="https://ccc.hd-r.cn/2cd2a8b2b59457f3d05455cd3fe88664.png" align=""> </div><!-- /.col-md-6 -->
 								<div class="col-md-6">
 									<h3>I Design Awesome Web Apps</h3>
 									<p>
