--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
+<meta name="google-site-verification" content="4iSkzxmlZEPrHDghoEuIvATQGKISODWNZozXk4gEcqQ" />
 <title>欢迎来到我的世界--fushuai</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
