--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <!-- 添加滑动功能 -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
+<!-- Google Analytics  谷歌统计-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+  ga('create', 'UA-XXXXX-Y', 'auto');
+  ga('send', 'pageview');
+  </script>
+  <!-- End Google Analytics -->
 <!-- 百度统计 -->
 <script>
   var _hmt = _hmt || [];
