--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           <div class="col-md-12">
 		   
             <div class="top_left_cont zoomIn wow animated"> 
-              <h2>Hello, my name is 付帅<br> <strong>I <i class="fa fa-heart"></i> CODE</strong></h2>
+              <h2>Hello, my name is 付帅<br> <strong>I <i class="fa fa-heart"></i>programming</strong></h2>
 
                 <div class="underline"></div>             
               <a href="#aboutUs" class="read_more2">个人介绍</a> </div>
