添加了聊天助手样式

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <!-- 聊天助手样式 ------------------->
 <style>
   #chat-circle {
+   
       position: fixed;
       bottom: 20px;
       right: 20px;
@@ -87,13 +88,15 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
   }
 
   #chat-frame {
+
       position: fixed;
       bottom: 20px;
       right: 90px;
       width: 350px;
       height: 500px;
-      border: none;
-      border-radius: 8px;
+      /* border: none; */
+border: 2px solid #868080;
+border-radius: 5%;
       display: none;
   }
 </style>
@@ -118,7 +121,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <i class="fas fa-comment"></i>
 </div>
 
-<iframe id="chat-frame" src="https://chat18.aichatos.xyz/#/chat/1704813479151"  style="background-color: #eee3e3;z-index: 999;"></iframe>
+<iframe id="chat-frame"  src="https://chat18.aichatos.xyz/#/chat/1704813479151"  style="background-color: #eee3e3;z-index: 999;"></iframe>
 
 
 <!--Hero_Section-->
