--- a/index.html
+++ b/index.html
@@ -182,15 +182,17 @@ border-radius: 5%;
 								<div class="col-md-6">
 									<h3>I Design Awesome  WebApps</h3>
 									<p>
-										 Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor orci ipsum gravida tortor. Lorem ipsum dolor sit amet, tortor orci ipsum gravida tortor. Lorem ipsum dolor sit amet, conseconsectetur.
+                    使用 HTML5 构建网页文档，利用新增API开发新的功能；
+                    编写 css 样式表，动画等，布局页面，利用stylus进行快速和便于维护的开发
+                    熟悉flex布局，流式布局，自适应布局，等等常规和非常规布局方式
 									</p>
 
 									<ul class="about-us-list">
-										<li class="points">Consectetur Morbi sagittis, sem quisci ipsum gravida tortor</li>
-										<li class="points">Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida </li>
-										<li class="points">Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci gravida </li>
-                                        <li class="points">Sagittis, sem quis lacinia faucibus, orci ipsum gravida </li>
-										<li class="points">Ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci</li>
+										<li class="points">熟悉 node.js 环境，基本模块，和常用三方模块，以及 node前端工具</li>
+										<li class="points">熟悉vue+webpack构建及组件开发； </li>
+										<li class="points">熟悉webgl原生功能及开发可视化3d组件 </li>
+                                        <li class="points">熟悉各种三方js库，velocity,animate,wow,等等 </li>
+										<li class="points">了解three.js引擎，和shader编写；了解blender建模软件</li>
 									</ul><!-- /.about-us-list -->
 								 
 								</div><!-- /.col-md-6 -->
