--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ border-radius: 5%;
           <div class="col-md-12">
 		   
             <div class="top_left_cont zoomIn wow animated"> 
-              <h2>Hello, my name is 付帅<br> <strong>I <i class="fa fa-heart"></i>programming</strong></h2>
+              <h2>Hello, my name is fs<br> <strong>I <i class="fa fa-heart"></i>programming</strong></h2>
 
                 <div class="underline"></div>             
               <a href="#aboutUs" class="read_more2">个人介绍</a> </div>
