--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ border-radius: 5%;
 		<div class="service_icon icon3  delay-03s animated wow zoomIn"> <span><i class="fa fa-html5"></i></span> </div>
           <div class="service_block">
             
-            <h3 class="animated fadeInUp wow">JAVA</h3>
+            <h3 class="animated fadeInUp wow">公众号</h3>
             <p class="animated fadeInDown wow">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  </p>
           </div>
         </div>
@@ -242,7 +242,7 @@ border-radius: 5%;
 		<div class="service_icon icon3  delay-03s animated wow zoomIn"> <span><i class="fa fa-user"></i></span> </div>
           <div class="service_block">
             
-            <h3 class="animated fadeInUp wow">开发</h3>
+            <h3 class="animated fadeInUp wow">后端</h3>
             <p class="animated fadeInDown wow">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  </p>
           </div>
         </div>
