--- a/index.html
+++ b/index.html
@@ -286,13 +286,13 @@ border-radius: 5%;
           <h5>原型</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".design">
-          <h5>设计</h5>
+          <h5>公众号</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".android">
-          <h5>Android</h5>
+          <h5>WEB</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".appleIOS">
-          <h5>Apple IOS</h5>
+          <h5>小程序</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".web">
           <h5>Web App</h5>
