--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ border-radius: 5%;
 						<div class="col-lg-12 about-us">
 							<div class="row">
                 <!--  背景展示 原地址 <div class="col-md-6"> <img class="img-responsive" src="img/about1.png"   -->
-							<div class="col-md-6 " id="element"> <img class="img-responsive" src="https://ccc.hd-r.cn/2cd2a8b2b59457f3d05455cd3fe88664.png" align=""> </div><!-- /.col-md-6 -->
+							<div class="col-md-6 " id="element"> <img class="img-responsive" src="https://s1.imagehub.cc/images/2024/05/12/245a354bdb5d28cbd84b507093294b1b.md.png" align=""> </div><!-- /.col-md-6 -->
 								<div class="col-md-6">
 									<h3>I Design Awesome  WebApps</h3>
 									<p>
