--- a/index.html
+++ b/index.html
@@ -436,12 +436,12 @@ border-radius: 5%;
 <!--/Portfolio --> 
 
 <section class="page_section" id="clients"><!--page_section-->
-  <h2>工作履历</h2>
+  <h2>工作栈</h2>
 <!--page_section-->
 <div class="client_logos"><!--client_logos-->
   <div class="container">
     <ul class="fadeInRight animated wow">
-      <li><a href="javascript:void(0)"><img src="img/client_logo1.png" alt=""></a></li>
+      <li><a href="javascript:void(0)"><img src="img/vue.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo2.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo3.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo5.png" alt=""></a></li>
