--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <!-- Google Analytics  谷歌统计-->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-00SHC07Y73"></script>
+<!-- 引入echarts插件 -->
+<script type="text/javascript" src="https://registry.npmmirror.com/echarts/5.5.0/files/dist/echarts.min.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -71,7 +73,16 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
   }
 #big {
 }
+/* 数据可视化页面 */
 
+
+#team{
+padding: 0%;
+height: 700px;
+border-bottom: 2px solid rgb(72, 42, 42);
+
+
+}
 
   
   #chat-circle:hover {
@@ -158,7 +169,7 @@ border-radius: 5%;
 			  <li><a href="#service" class="scroll-link">技术栈</a></li>
 			  <li><a href="#Portfolio" class="scroll-link">项目</a></li>
 			  <li><a href="#clients" class="scroll-link">经验</a></li>
-			  <li><a href="#team" class="scroll-link">团队</a></li>
+			  <li><a href="#team" class="scroll-link">大屏可视化</a></li>
 			  <li><a href="#contact" class="scroll-link">联系我</a></li>
 			</ul>
       </div>
@@ -441,7 +452,7 @@ border-radius: 5%;
 <div class="client_logos"><!--client_logos-->
   <div class="container">
     <ul class="fadeInRight animated wow">
-      <li><a href="javascript:void(0)"><img src="img/vue.png" alt=""></a></li>
+      <li><a href="javascript:void(0)"><img src="img/client_logo1.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo2.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo3.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo5.png" alt=""></a></li>
@@ -450,42 +461,14 @@ border-radius: 5%;
 </div>
 </section>
 <!--client_logos-->
+<!-- 大屏可视化数据页面 -->
+<section class="page_section team" id="team">
+ 
 
-<section class="page_section team" id="team"><!--main-section team-start-->
-  <div class="container">
-    <h2>Testimonial</h2>
-    <h6>Lorem ipsum dolor sit amet, consectetur adipiscing.</h6>
-	  	
-		<div id="team" name="team">
-  <div class="container">
-    <div class="row centered">
-      
-      <div class="col-md-3 centered"> 
-        <div class="rt-box"><h4><strong>工作履历</strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor.</p><br/>
-		</div>
-       </div>
-         <div class="col-md-3 centered"> 
-        <div class="rt-box"><h4><strong>工作履历</strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor.</p><br/>
-		</div>
-       </div>
-	      <div class="col-md-3 centered"> 
-        <div class="rt-box"><h4><strong>工作履历</strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor.</p><br/>
-		</div>
-       </div>
-	      <div class="col-md-3 centered"> 
-        <div class="rt-box"><h4><strong>工作履历</strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor.</p><br/>
-		</div>
-       </div>
-   
-    </div>
-  </div>
-  <!-- row --> 
-</div>
-	</div>
+
+
+
+
 </section>
 <!--/Team-->
 <!--Footer-->
@@ -538,6 +521,452 @@ border-radius: 5%;
     <div class="footer_bottom"><span>Copyright © 2023,    Template by <a href="http://baidu.com">baidu.com</a>. .</span> </div>
   </div>
 </footer>
+<!-- 大屏可视化数据类容 -->
+<script type="text/javascript">
+  var dom = document.getElementById('team');
+  var myChart = echarts.init(dom, null, {
+    renderer: 'canvas',
+    useDirtyRect: false
+  });
+  var app = {};
+  
+  var option;
+
+  const colors = ['#FFAE57', '#FF7853', '#EA5151', '#CC3F57', '#9A2555'];
+const bgColor = '#2E2733';
+const itemStyle = {
+star5: {
+  color: colors[0]
+},
+star4: {
+  color: colors[1]
+},
+star3: {
+  color: colors[2]
+},
+star2: {
+  color: colors[3]
+}
+};
+const data = [
+{
+  name: '虚构',
+  itemStyle: {
+    color: colors[1]
+  },
+  children: [
+    {
+      name: '小说',
+      children: [
+        {
+          name: '5☆',
+          children: [
+            {
+              name: '疼'
+            },
+            {
+              name: '慈悲'
+            },
+            {
+              name: '楼下的房客'
+            }
+          ]
+        },
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '虚无的十字架'
+            },
+            {
+              name: '无声告白'
+            },
+            {
+              name: '童年的终结'
+            }
+          ]
+        },
+        {
+          name: '3☆',
+          children: [
+            {
+              name: '疯癫老人日记'
+            }
+          ]
+        }
+      ]
+    },
+    {
+      name: '其他',
+      children: [
+        {
+          name: '5☆',
+          children: [
+            {
+              name: '纳博科夫短篇小说全集'
+            }
+          ]
+        },
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '安魂曲'
+            },
+            {
+              name: '人生拼图版'
+            }
+          ]
+        },
+        {
+          name: '3☆',
+          children: [
+            {
+              name: '比起爱你，我更需要你'
+            }
+          ]
+        }
+      ]
+    }
+  ]
+},
+{
+  name: '非虚构',
+  itemStyle: {
+    color: colors[2]
+  },
+  children: [
+    {
+      name: '设计',
+      children: [
+        {
+          name: '5☆',
+          children: [
+            {
+              name: '无界面交互'
+            }
+          ]
+        },
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '数字绘图的光照与渲染技术'
+            },
+            {
+              name: '日本建筑解剖书'
+            }
+          ]
+        },
+        {
+          name: '3☆',
+          children: [
+            {
+              name: '奇幻世界艺术\n&RPG地图绘制讲座'
+            }
+          ]
+        }
+      ]
+    },
+    {
+      name: '社科',
+      children: [
+        {
+          name: '5☆',
+          children: [
+            {
+              name: '痛点'
+            }
+          ]
+        },
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '卓有成效的管理者'
+            },
+            {
+              name: '进化'
+            },
+            {
+              name: '后物欲时代的来临'
+            }
+          ]
+        },
+        {
+          name: '3☆',
+          children: [
+            {
+              name: '疯癫与文明'
+            }
+          ]
+        }
+      ]
+    },
+    {
+      name: '心理',
+      children: [
+        {
+          name: '5☆',
+          children: [
+            {
+              name: '我们时代的神经症人格'
+            }
+          ]
+        },
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '皮格马利翁效应'
+            },
+            {
+              name: '受伤的人'
+            }
+          ]
+        },
+        {
+          name: '3☆'
+        },
+        {
+          name: '2☆',
+          children: [
+            {
+              name: '迷恋'
+            }
+          ]
+        }
+      ]
+    },
+    {
+      name: '居家',
+      children: [
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '把房子住成家'
+            },
+            {
+              name: '只过必要生活'
+            },
+            {
+              name: '北欧简约风格'
+            }
+          ]
+        }
+      ]
+    },
+    {
+      name: '绘本',
+      children: [
+        {
+          name: '5☆',
+          children: [
+            {
+              name: '设计诗'
+            }
+          ]
+        },
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '假如生活糊弄了你'
+            },
+            {
+              name: '博物学家的神秘动物图鉴'
+            }
+          ]
+        },
+        {
+          name: '3☆',
+          children: [
+            {
+              name: '方向'
+            }
+          ]
+        }
+      ]
+    },
+    {
+      name: '哲学',
+      children: [
+        {
+          name: '4☆',
+          children: [
+            {
+              name: '人生的智慧'
+            }
+          ]
+        }
+      ]
+    },
+    {
+      name: '技术',
+      children: [
+        {
+          name: '5☆',
+          children: [
+            {
+              name: '代码整洁之道'
+            }
+          ]
+        },
+        {
+          name: '4☆',
+          children: [
+            {
+              name: 'Three.js 开发指南'
+            }
+          ]
+        }
+      ]
+    }
+  ]
+}
+];
+for (let j = 0; j < data.length; ++j) {
+let level1 = data[j].children;
+for (let i = 0; i < level1.length; ++i) {
+  let block = level1[i].children;
+  let bookScore = [];
+  let bookScoreId;
+  for (let star = 0; star < block.length; ++star) {
+    let style = (function (name) {
+      switch (name) {
+        case '5☆':
+          bookScoreId = 0;
+          return itemStyle.star5;
+        case '4☆':
+          bookScoreId = 1;
+          return itemStyle.star4;
+        case '3☆':
+          bookScoreId = 2;
+          return itemStyle.star3;
+        case '2☆':
+          bookScoreId = 3;
+          return itemStyle.star2;
+      }
+    })(block[star].name);
+    block[star].label = {
+      color: style.color,
+      downplay: {
+        opacity: 0.5
+      }
+    };
+    if (block[star].children) {
+      style = {
+        opacity: 1,
+        color: style.color
+      };
+      block[star].children.forEach(function (book) {
+        book.value = 1;
+        book.itemStyle = style;
+        book.label = {
+          color: style.color
+        };
+        let value = 1;
+        if (bookScoreId === 0 || bookScoreId === 3) {
+          value = 5;
+        }
+        if (bookScore[bookScoreId]) {
+          bookScore[bookScoreId].value += value;
+        } else {
+          bookScore[bookScoreId] = {
+            color: colors[bookScoreId],
+            value: value
+          };
+        }
+      });
+    }
+  }
+  level1[i].itemStyle = {
+    color: data[j].itemStyle.color
+  };
+}
+}
+option = {
+backgroundColor: bgColor,
+color: colors,
+series: [
+  {
+    type: 'sunburst',
+    center: ['50%', '48%'],
+    data: data,
+    sort: function (a, b) {
+      if (a.depth === 1) {
+        return b.getValue() - a.getValue();
+      } else {
+        return a.dataIndex - b.dataIndex;
+      }
+    },
+    label: {
+      rotate: 'radial',
+      color: bgColor
+    },
+    itemStyle: {
+      borderColor: bgColor,
+      borderWidth: 2
+    },
+    levels: [
+      {},
+      {
+        r0: 0,
+        r: 40,
+        label: {
+          rotate: 0
+        }
+      },
+      {
+        r0: 40,
+        r: 105
+      },
+      {
+        r0: 115,
+        r: 140,
+        itemStyle: {
+          shadowBlur: 2,
+          shadowColor: colors[2],
+          color: 'transparent'
+        },
+        label: {
+          rotate: 'tangential',
+          fontSize: 10,
+          color: colors[0]
+        }
+      },
+      {
+        r0: 140,
+        r: 145,
+        itemStyle: {
+          shadowBlur: 80,
+          shadowColor: colors[0]
+        },
+        label: {
+          position: 'outside',
+          textShadowBlur: 5,
+          textShadowColor: '#333'
+        },
+        downplay: {
+          label: {
+            opacity: 0.5
+          }
+        }
+      }
+    ]
+  }
+]
+};
+
+  if (option && typeof option === 'object') {
+    myChart.setOption(option);
+  }
+
+  window.addEventListener('resize', myChart.resize);
+</script>
+
+
 
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <!-- ------------  图片3d旋转----------------- -->
